--- a/pom.xml
+++ b/pom.xml
@@ -41,6 +41,11 @@
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.flywaydb</groupId>
+            <artifactId>flyway-mysql</artifactId>
+            <version>9.16.0</version>
+        </dependency>
     </dependencies>
 
     <build>
