--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,6 +2,6 @@ spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/bots-crew
 spring.datasource.username=root
 spring.datasource.password=Yaroslav1996
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.jpa.show-sql=true
+spring.jpa.show-sql=false
 spring.jpa.hibernate.ddl-auto=none
 spring.flyway.locations=classpath:db/migration
